--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "dotnet-test-explorer.testProjectPath": "**/*tests.@(csproj|vbproj|fsproj)"
+    "dotnet-test-explorer.testProjectPath": "**/*tests.@(csproj|vbproj|fsproj)",
+    "dotnet-test-explorer.testArguments": "",
+    "dotnet-test-explorer.showCodeLens": true
 }
