--- a/src/Newdigate.MethodCallAnalysis.Core.csproj
+++ b/src/Newdigate.MethodCallAnalysis.Core.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
-		<RootNamespace>type_deinference.tests</RootNamespace>
+		<RootNamespace>Newdigate.MethodCallAnalysis.Core</RootNamespace>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
@@ -13,19 +13,6 @@
 		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.2.0"/>
 		<PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.2.0"/>
 		<PackageReference Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" Version="4.2.0"/>
-		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0"/>
 		<PackageReference Include="NuGet.Frameworks" Version="6.2.1"/>
-		<PackageReference Include="xunit" Version="2.4.2"/>
-		<PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
-			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-			<PrivateAssets>all</PrivateAssets>
-		</PackageReference>
-		<PackageReference Include="coverlet.collector" Version="3.1.2">
-			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-			<PrivateAssets>all</PrivateAssets>
-		</PackageReference>
-	</ItemGroup>
-	<ItemGroup>
-		<ProjectReference Include="..\src\type-deinference.csproj"/>
 	</ItemGroup>
 </Project>
